UPDATE Stylist alpha 37.5 ・Very minor change

--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -1076,7 +1076,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="ElC-ds-RgJ"/>
-        <segue reference="PbG-0j-NXL"/>
+        <segue reference="92p-7F-r2P"/>
         <segue reference="z6c-Iv-rJh"/>
         <segue reference="BK8-ow-a7u"/>
         <segue reference="XKH-ik-kmo"/>
